syntax = "proto3";

package service.user.api.profile.v1;

option go_package = "backend/service/user/api/profile/v1;v1";
option java_multiple_files = true;
option java_package = "service.user.api.profile.v1";

import "validate/validate.proto";
import "google/api/annotations.proto";

service Profile {
  rpc CreateProfile (CreateProfileRequest) returns (CreateProfileReply){
    option (google.api.http) = {
      get: "/api/v1/profile"
    };
  };
  rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileReply);
  rpc DeleteProfile (DeleteProfileRequest) returns (DeleteProfileReply);
  rpc GetProfile (GetProfileRequest) returns (GetProfileReply);
  rpc ListProfile (ListProfileRequest) returns (ListProfileReply);
}

message CreateProfileRequest {}
message CreateProfileReply {}

message UpdateProfileRequest {}
message UpdateProfileReply {}

message DeleteProfileRequest {}
message DeleteProfileReply {}

message GetProfileRequest {
  string name = 1 [(validate.rules).string.min_len = 2, (validate.rules).string.max_len = 4];
  string avatar = 2;
}

message GetProfileReply {
  string name = 1 [(validate.rules).string.min_len = 2, (validate.rules).string.max_len = 4];
  string avatar = 2;
}

message ListProfileRequest {}
message ListProfileReply {}
